--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -13,6 +13,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="../_bower_components/c3js-chart/c3.css" />
         <link rel="stylesheet" href="../_bower_components/impress.js/css/impress-demo.css">
+        <link rel="stylesheet" href="../_bower_components/font-awesome/css/font-awesome.css" />
         <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
 
