Dropdown and Cover Page are ready

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -20,6 +20,10 @@
     </head>
     <body>
 
+      <div class="loading">
+        <i class="fa fa-cog fa-spin"></i>
+      </div>
+
       <div id="impress">
         {{ content }}
       </div>
