--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,8 +1,5 @@
-body {
-  color: blue;
-}
 
-tbody tr:nth-child(odd) {
-  font: 2px;
-   background-color: #ccc;
-}
+@import "variables",
+        "loading",
+        "table",
+        "general"
