Working on table SCSS

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,5 +1,7 @@
 
 @import "variables",
         "loading",
-        "table",
-        "general"
+        "pure-table",
+        "general",
+        "table-wrap"
+
