--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="../_bower_components/impress.js/css/impress-demo.css">
         <link rel="stylesheet" href="../_bower_components/font-awesome/css/font-awesome.css" />
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
         <!-- endbuild -->
 
     </head>
