--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -2,6 +2,6 @@
 @import "variables",
         "loading",
         "pure-table",
-        "general",
-        "table-wrap"
+        "general";//,
+        // "table-wrap"
 
