Working on Page2 table

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,7 +1,6 @@
-
 @import "variables",
+        "mixins",
+        "general",
         "loading",
         "pure-table",
-        "general";//,
-        // "table-wrap"
-
+        "table-wrap";
