--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,5 +1,6 @@
-@import "variables",
+@import "../_bower_components/sass-bootstrap/lib/bootstrap.scss",
+        "variables",
         "mixins",
+        "overrides",
         "general",
-        "loading",
-        "tables";
+        "loading";
