Just in case we need to commit first before build

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../_bower_components/c3js-chart/c3.css" />
         <link rel="stylesheet" href="../_bower_components/impress.js/css/impress-demo.css">
         <link rel="stylesheet" href="../_bower_components/font-awesome/css/font-awesome.css" />
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <!-- endbuild -->
 
     </head>
@@ -35,7 +35,7 @@
       <script src="../_bower_components/d3/d3.js"></script>
       <script src="../_bower_components/c3js-chart/c3.js"></script>
       <script src="../_bower_components/impress.js/js/impress.js"></script>
-      <script src="/js/main.js"></script>
+      <script src="js/main.js"></script>
       <!-- endbuild -->
     </body>
 </html>
