Cover page and Page1 CSS finished

--- a/app/_scss/_general.scss
+++ b/app/_scss/_general.scss
@@ -18,3 +18,9 @@ body,p,div,html,h1,h2,h3,table {
 .relative {
   position: relative;
 }
+
+.pageTitle {
+  padding-bottom: 100px;
+  font-color: red;
+  font-family: arial;
+}
