--- a/app/_scss/_overrides.scss
+++ b/app/_scss/_overrides.scss
@@ -7,18 +7,19 @@
   width: 1500px;
   font-family: arial;
   margin: auto;
-  padding: 75px 75px;
+  padding: 100px 100px;
 }
 
 .half {
   padding: 25px;
 }
 
-.coverPageTitle {
-  padding-bottom: 100px;
+.coverpage, .coverpage-dateexported {
   margin-left: auto;
   margin-right: auto;
   display: block;
+  text-align: center;
+  padding-bottom: 50px;
 }
 
 table, tr, th {
@@ -36,16 +37,10 @@ th, tfoot {
   background-color: #999999;
 }
 
-#coverpage {
-  text-align: center;
-}
-
-.page2Title {
+.pageTitle {
   padding-left: 35px;
-}
-
-.page3Title {
- padding-left: 35px; 
+  padding-bottom: -30px;
+  font-family: arial;
 }
 
 .trName {
@@ -61,20 +56,30 @@ th, tfoot {
 
 .trPerc {
   text-align: right;
-  // margin-left: 50%;
-  // width: 20px;
 }
 
 .table-total {
-  background-color: blue;
-  // padding-right: 50%;
-  // margin-right: 200px;
-  text-align: right;
-  // width: 1%;
+  padding-right: 50%;
+  margin-right: 200px;
+  text-align: left;
+  width: 10px;
 }
 
 
 #table-total {
   width: 50px;
-  // padding-right: 50%;
+}
+
+#dropdown {
+  font-color: $clr_grey;
+}
+
+.coverpage-reportdate {
+  text-align: center;
+}
+
+.table-total {
+  padding-right: 100px;
+  border-width: 10px;
+  width: 10px;
 }
