--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -11,10 +11,10 @@
 
         <!-- build:css({app,.tmp}) /css/main.css -->
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="../_bower_components/c3js-chart/c3.css" />
-        <link rel="stylesheet" href="../_bower_components/impress.js/css/impress-demo.css">
-        <link rel="stylesheet" href="../_bower_components/font-awesome/css/font-awesome.css" />
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/_bower_components/c3js-chart/c3.css" />
+        <link rel="stylesheet" href="/_bower_components/impress.js/css/impress-demo.css">
+        <link rel="stylesheet" href="/_bower_components/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
 
     </head>
@@ -31,11 +31,11 @@
       <!-- endbower -->
 
       <!-- build:js(app) /js/scripts.js -->
-      <script src="../_bower_components/jquery/dist/jquery.js"></script>
-      <script src="../_bower_components/d3/d3.js"></script>
-      <script src="../_bower_components/c3js-chart/c3.js"></script>
-      <script src="../_bower_components/impress.js/js/impress.js"></script>
-      <script src="js/main.js"></script>
+      <script src="/_bower_components/jquery/dist/jquery.js"></script>
+      <script src="/_bower_components/d3/d3.js"></script>
+      <script src="/_bower_components/c3js-chart/c3.js"></script>
+      <script src="/_bower_components/impress.js/js/impress.js"></script>
+      <script src="/js/main.js"></script>
       <!-- endbuild -->
     </body>
 </html>
